--- a/css/main.css
+++ b/css/main.css
@@ -23,12 +23,20 @@ a {
 }
 
 .global-nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 44px;
     padding: 0 1rem;
 }
 
 .local-nav {
+    position: absolute;
     height: 52px;
+    top: 45px;
+    left: 0;
+    width: 100%;
     border-bottom: 1px solid #ddd;
     padding: 0 1rem;
 }
@@ -61,6 +69,7 @@ a {
 }
 
 .scroll-section {
+    border: 3px solid red;
     padding-top: 50vh;
 }
 
@@ -76,6 +85,7 @@ a {
     margin: 5px 0;
     height: 3em;
     font-size: 2.5rem;
+    opacity: 0;
 }
 
 .main-message p {
@@ -147,6 +157,21 @@ a {
     height: 7rem;
     background: darkorange;
     color: white;
+}
+
+.sticky-elem {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+#show-scene-0 #scroll-section-0 .sticky-elem,
+#show-scene-1 #scroll-section-1 .sticky-elem,
+#show-scene-2 #scroll-section-2 .sticky-elem,
+#show-scene-3 #scroll-section-3 .sticky-elem {
+    display: block;
 }
 
 @media (min-width: 1024px) {
