--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,7 @@ a {
     justify-content: center;
     margin: 5px 0;
     height: 3em;
+    top: 35vw;
     font-size: 2.5rem;
     opacity: 0;
 }
@@ -130,6 +131,16 @@ a {
     background: rgb(29, 29, 31);
 }
 
+#scroll-section-2 .b {
+    top: 10%;
+    left: 40%;
+}
+
+#scroll-section-2 .c {
+    top: 15%;
+    left: 45%;
+}
+
 .mid-message {
     max-width: 1000px;
     margin: 0 auto;
@@ -162,7 +173,6 @@ a {
 .sticky-elem {
     display: none;
     position: fixed;
-    top: 0;
     left: 0;
     width: 100%;
 }
@@ -202,6 +212,15 @@ a {
 
     .desc-message {
         width: 20%;
+    }
+
+    #scroll-section-2 .b {
+        top: 20%;
+        left: 53%;
+    }
+    
+    #scroll-section-2 .c {
+        left: 55%;
     }
 
     .mid-message {
